# PennySpy

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: docker-build.yml  docker-publish.yml  tag-version.yml  version-bump.yml
frontend/: bmo.html  bmo.js  health-check.js  index.html  logs.html  logs.js  package-version.js  qfx-filter.js  rbc.html  rbc.js  scotia.html  scotia.js  styles.css  ws.html  ws.js
pennyspy/: logging_setup.py  pennyspy_api.py  version_check.py
pennyspy/formating/: csv_formating.py  qfx_formating.py
pennyspy/scrapers/: __init__.py  base.py  get_required_env_var.py  router.py  scraper.py  scrapers.py  session.py
pennyspy/scrapers/bmo_bank/: bmo_api.py  bmo_bank.py  connection_element_id.py  delay_seconds.py  get_default_filename.py  request_options.py  setup.md
pennyspy/scrapers/bot_detection_checker/: bot_detection_checker.py  dandb_bot_detector.py  rebrowser_bot_detector.py
pennyspy/scrapers/rbc_bank/: connection_element_id.py  delay_seconds.py  get_default_filename.py  identifiers.py  rbc_api.py  rbc_bank.py  request_options.py  setup.md
pennyspy/scrapers/scotiabank/: connection_element_id.py  delay_seconds.py  get_default_filename.py  request_options.py  scotiabank.py  setup.md
pennyspy/scrapers/wealthsimple/: activity_fields.py  activity_id.py  connection_element_id.py  delay_seconds.py  identifiers.py  normalize_financial_data.py  setup.md  (+2 more)
pennyspy/tests/: test_chrome_version.py  test_scrapper_detection.py  test_version_check.py
scripts/: __init__.py  check_version_bump.py  push_image.py
(+1 files in other folders)
